update terraform script to be compatible with 100k scenario, update operator and hivemq images to latest version, reconfigure to use config hot reloading and separation from CR

--- a/infrastructure/hivemq/hivemq-crd-evaluation.yaml
+++ b/infrastructure/hivemq/hivemq-crd-evaluation.yaml
@@ -4,17 +4,19 @@ metadata:
   name: hivemq-cluster1
   namespace: hivemq
 spec:
-  hivemqVersion: latest
+  hivemqVersion: 0.1.0
   image: sbaier1/hivemq-k8s
   imagePullPolicy: Always
-  nodeCount: 5
+  nodeCount: 3
   logLevel: INFO
   mqtt:
     maxQos: 2
   monitoring:
     enablePrometheus: true
-  memoryRequest: 6G
-  cpuRequest: 2000m
+  memoryRequest: 3G
+  configMaps:
+    - name: kafka-config
+  cpuRequest: 1000m
   initContainers:
     - name: init-kafka-plugin
       args:
