update the operator version, update custom resources to the latest schema version

--- a/infrastructure/hivemq/hivemq-crd-evaluation.yaml
+++ b/infrastructure/hivemq/hivemq-crd-evaluation.yaml
@@ -17,7 +17,7 @@ spec:
   cpuRequest: 1000m
   configMaps:
     - name: kafka-config
-  initContainers:
+  initialization:
     - name: init-kafka-plugin
       args:
         - |
