--- a/infrastructure/hivemq/hivemq-crd.yaml
+++ b/infrastructure/hivemq/hivemq-crd.yaml
@@ -17,9 +17,8 @@ spec:
   cpuRequest: 2000m
   configMaps:
     - name: hivemq-license
-      path: /opt/hivemq/license
     - name: kafka-config
-  initContainers:
+  initialization:
     - name: init-kafka-plugin
       args:
         - |
