update hivemq dashboard to include some initial kafka metrics, update custom resources and operator version to latest snapshot update large scenario to run for longer amount of time so we can train the TF model faster/easier, adjust some kafka client parameters in tf-io

--- a/infrastructure/hivemq/hivemq-crd-evaluation.yaml
+++ b/infrastructure/hivemq/hivemq-crd-evaluation.yaml
@@ -13,8 +13,8 @@ spec:
     maxQos: 2
   monitoring:
     enablePrometheus: true
-  memoryRequest: 3G
-  cpuRequest: 1000m
+  memory: 3G
+  cpu: 1000m
   configMaps:
     - name: kafka-config
   initialization:
