--- a/python-scripts/AUTOENCODER-TensorFlow-IO-Kafka/model-predictions.yaml
+++ b/python-scripts/AUTOENCODER-TensorFlow-IO-Kafka/model-predictions.yaml
@@ -16,7 +16,7 @@ spec:
         failure-domain.beta.kubernetes.io/zone: europe-west1-b
       containers:
         - name: model
-          image: sbaier1/car-sensor-model:autoencoder
+          image: sbaier1/car-sensor-model:autoencoder-1.1
           imagePullPolicy: Always
           command: ["python3"]
           args:
@@ -27,7 +27,7 @@ spec:
             - model-predictions
             - predict
             - model1.h5
-            - kai-waehner-project
+            - kai-waehner-project_car-demo-cluster
           volumeMounts:
           - name: storage-secret
             mountPath: /credentials
