--- a/python-scripts/AUTOENCODER-TensorFlow-IO-Kafka/model-training.yaml
+++ b/python-scripts/AUTOENCODER-TensorFlow-IO-Kafka/model-training.yaml
@@ -6,7 +6,7 @@ spec:
   restartPolicy: Never
   containers:
     - name: training
-      image: sbaier1/car-sensor-model:autoencoder
+      image: sbaier1/car-sensor-model:autoencoder-1.1
       imagePullPolicy: Always
       command: ["python3"]
       args:
@@ -17,7 +17,7 @@ spec:
        - model-predictions
        - train
        - model1.h5
-       - kai-waehner-project
+       - kai-waehner-project_car-demo-cluster
       volumeMounts:
         - name: storage-secret
           mountPath: /credentials
